[project]
name = "credit-risk-metamodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
